# io

./: .gitattributes  .gitignore  .ocamlformat  .persp.el  LICENSE  README.md  TODO.md  about.html  build.sh  cinquante.html  cinquante.js  dune-env.inc  dune-project  gaussian.py  get_scripts_size.ipython  header.css  index.css  index.html  lrcraft-game.html  mnist-js.html  mnist-jsoo.css  mnist-jsoo.html  mnist.py  ocann0.html  persp.yaml  planck_test2.js  planck_test4.js  planck_test4_bis.js  planck_test4_ter.js  reactjs-wrapper.html  snippets.html  styles.css  test.js
lib/: dune
lib/articles/: a0_reactjs_wrapper.ml  a1_ocann0.ml  articles.ml  dune  misc.ml  reactjs_ex0.ml  reactjs_ex1.ml
lib/fnn/: fnn.ml  init.ml  make_fnn.ml  misc.ml  patch.ml
lib/fnn_owl/: bridge.ml  bridge_eval.ml  fnn_owl.ml  misc.ml
lib/fnn_tfjs/: bridge.ml  dune  (+5 more)
lib/ft_cnnjs/: dune  fnn_archi.ml  fnn_tfjs.ml  ft_cnnjs.ml  misc.ml  mnist.ml  mnist_tfjs.ml  network_construction.ml  nn.ml  nn_tfjs.ml  panel.ml  tfjs_api.ml  training.ml  training_types.ml
lib/ft_js/: conv.ml  dune  fake_stubs.c  ft_js.ml  irmin_indexeddb_js_api.ml  irmin_indexeddb_raw_noutf.ml  misc.ml  react.ml  reactjs.ml  reactjs.mli  scripts.ml  stubs.js  webworker.ml
lib/mnist_js/: backend.ml  constants.ml  dune  evaluation.ml  evaluation_tfjs.ml  main.ml  mnist.ml  network_architectures.ml  network_construction.ml  resources.ml  results.ml  tab.ml  training.ml  training_configuration.ml  training_tfjs.ml  training_types.ml  types.ml
lib/mnist_jsoo/: backend.ml  backend_selection.ml  chart.ml  chart_data.ml  dashboard.ml  debug.ml  dune  evaluation.ml  evaluation_owl_cpu.ml  evaluation_tfjs.ml  main.ml  mnist.ml  network_architectures.ml  network_construction.ml  owl_snippets.ml  resources.ml  results.ml  tab.ml  toasts.ml  training.ml  training_configuration.ml  training_owl_cpu.ml  training_tfjs.ml  types.ml
misc/: gaussian.py
old/: owl_train.ml
(+41 files in other folders)
