(library
 (public_name ft_cnnjs)
 (name ft_cnnjs)

 (libraries js_of_ocaml js_of_ocaml-tyxml js_of_ocaml-lwt tyxml ft owl-base ft_js ft_owlbase irmin-indexeddb fnn pshape yojson ppx_deriving_yojson.runtime)
 (preprocess (pps tyxml-ppx js_of_ocaml-ppx lwt_ppx ppx_deriving_yojson ppx_deriving.enum))
 )
